SERVER-32677 Fix segmentation fault when converting a replica set to a replicated sharded cluster