src/mongo/db/db.cpp
@@ -998,6 +998,7 @@ ExitCode _initAndListen(int listenPort) {
 
     // Set up the logical session cache
     LogicalSessionCacheServer kind = LogicalSessionCacheServer::kStandalone;
+
     if (serverGlobalParams.clusterRole == ClusterRole::ShardServer) {
         kind = LogicalSessionCacheServer::kSharded;
     } else if (serverGlobalParams.clusterRole == ClusterRole::ConfigServer) {
@@ -1006,8 +1007,14 @@ ExitCode _initAndListen(int listenPort) {
         kind = LogicalSessionCacheServer::kReplicaSet;
     }
 
-    auto sessionCache = makeLogicalSessionCacheD(serviceContext, kind);
-    LogicalSessionCache::set(serviceContext, std::move(sessionCache));
+    // Shards and config servers set up the LogicalSessionCache when they go through sharding
+    // state initialization
+    if (kind == LogicalSessionCacheServer::kStandalone ||
+        kind == LogicalSessionCacheServer::kReplicaSet) {
+        invariant(LogicalSessionCache::get(startupOpCtx.get()) == nullptr);
+        auto sessionCache = makeLogicalSessionCacheD(serviceContext, kind);
+        LogicalSessionCache::set(serviceContext, std::move(sessionCache));
+    }
 
     // MessageServer::run will return when exit code closes its socket and we don't need the
     // operation context anymore
